--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
         <p>Please use LinkedIn to communicate with me for professional inquiries, Facebook for personal matters, Twitter if you desire my constant presence in your life, or simply leave a comment in the form below.  Links are located at the bottom of the page.</p>
       </section>
       <section>
-        <form action="MAILTO:matthew.crossett@gmail.com" method="post"> <!--action is relative or url link to php, python, etc. program for processing.  Method is http method for submission - this posts info to server-->
+        <form action="MAILTO:matthewcrossettcomments@gmail.com" method="post"> <!--action is relative or url link to php, python, etc. program for processing.  Method is http method for submission - this posts info to server-->
             <h4>Comments</h4>
           
             <fieldset>  <!-- Divides form into fields - adds spacing-->
