Color generator added

--- a/design.html
+++ b/design.html
@@ -31,6 +31,7 @@
         <ul>
             <li><a href="madlib/story.html">Mad Libs (JavaScript concatenation)</a></li>
             <li><a href="quiz/quiz.html">Geography Quiz (JavaScript conditional statements) </a></li>
+            <li><a href="color_generator/color_generator.html">Random Color Generator (JavaScript functions and loops) </a></li>
       </section>
       <footer>
         <a href="http://twitter.com/Matt_Crossett"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
